@@ -1,5 +1,7 @@
 *Edge*
 
+* MySQL: rename_column preserves column defaults.  #466 [Diego Algorta]
+
 * Add :from option to calculations.  #397 [Ben Munat]
 
 * Add :validate option to associations to enable/disable the automatic validation of associated models. Resolves #301. [Jan De Poorter]
